*SVN*

* Added Request#domain (returns string) and Request#subdomains (returns array).

* Added POST support for the breakpoint retries, so form processing that raises an exception can be retried with the original request [Florian Gross]


*1.0.1*

* Fixed a bug that would cause an ApplicationController to require itself three times and hence cause filters to be run three times [evl]


*1.0*

* Added that controllers will now attempt to require a model dependency with their name and in a singular attempt for their name.
  So both PostController and PostsController will automatically have the post.rb model required. If no model is found, no error is raised,
  as it is then expected that no match is available and the programmer will have included his own models.

* Fixed DateHelper#date_select so that you can pass include_blank as an option even if you don't use start_year and end_year #59 [what-a-day]

* Added that controllers will now search for a layout in $template_root/layouts/$controller_name.r(html|xml), so PostsController will look
  for layouts/posts.rhtml or layouts/posts.rxml and automatically configure this layout if found #307 [Marcel]

* Added FormHelper#radio_button to work with radio buttons like its already possible with check boxes [Michael Koziarski]

* Added TemplateError#backtrace that makes it much easier to debug template errors from unit and functional tests

* Added display of error messages with scaffolded form pages

* Added option to ERB templates to swallow newlines by using <% if something -%> instead of just <% if something %>. Example:

    class SomeController < ApplicationController
    <% if options[:scaffold] %>
      scaffold :<%= singular_name %>
    <% end %>
      helper :post
  
  ...produces this on post as singular_name:

    class SomeController < ApplicationController
    
      scaffold :post
    
      helper :post
  
  ...where as:

    class SomeController < ApplicationController
    <% if options[:scaffold] -%>