@@ -14,6 +14,11 @@ class ActiveRecordHelperTest < Test::Unit::TestCase
   include ActionView::Helpers::UrlHelper
 
   Post   = Struct.new("Post", :title, :author_name, :body, :secret, :written_on)
+  Post.class_eval do
+    alias_method :title_before_type_cast, :title unless respond_to?(:title_before_type_cast)
+    alias_method :body_before_type_cast, :body unless respond_to?(:body_before_type_cast)
+    alias_method :author_name_before_type_cast, :author_name unless respond_to?(:author_name_before_type_cast)
+  end
   Column = Struct.new("Column", :type, :name, :human_name)
 
   def setup
