@@ -4,6 +4,8 @@ $:.unshift(File.dirname(__FILE__) + '/../lib')
 require 'test/unit'
 require 'active_record'
 require 'active_record/fixtures'
+require 'active_record/support/binding_of_caller'
+require 'active_record/support/breakpoint'
 require 'connection'
 
 class Test::Unit::TestCase #:nodoc:
