@@ -1,8 +1,6 @@
 class Developer < ActiveRecord::Base
   has_and_belongs_to_many :projects
 
-  protected
-    def validate
-      errors.add_on_boundary_breaking("name", 3..20)
-    end
+  validates_inclusion_of :salary, :in => 50000..200000
+  validates_length_of    :name, :within => 3..20
 end
