@@ -348,4 +348,11 @@ class ValidationsTest < Test::Unit::TestCase
     assert_equal "hoo 5", t.errors["title"]
   end
 
+
+  def test_throw_away_typing
+    d = Developer.create "name" => "David", "salary" => "100,000"
+    assert !d.valid?
+    assert_not_equal "100,000", d.salary
+    assert_equal "100,000", d.salary_before_type_cast
+  end
 end
